Academia and experience z-index issues fixed
Academia and experience element structure updated to solve z-index
issue.
  - <Academia/> and <Experience/> are not used anymore.
  - <Academia/> and <Experience/> tags rendered first and tags after,
    so that bars and tags are render in this order:
      1. <Academia/> bars
      2. <Experience/> bars
      3. <Academia/> tags
      4. <Experience/> tags
    instead of being rendered in this order:
      1. <Academia/> bars
      2. <Academia/> tags
      3. <Experience/> bars
      4. <Experience/> tags
    Now <Experience/> bars won't be shown above <Academia/> tags.

--- a/app/index.css
+++ b/app/index.css
@@ -421,7 +421,7 @@ body {
 
 .timelineContainer {
 	position: relative;
-	max-width: 980px;
+	width: 980px;
 	margin: auto;
 	margin-top: 20px;
 }
@@ -480,6 +480,9 @@ body {
 	display: block;
 	margin: 0 auto 0 0;
 	z-index: 10;
+}
+.tagsContainer {
+	width: 100%;
 }
 
 
